REV FCU retheme, virtual threads, and connection pool tuning
UI Retheme:
- Switch PrimeVue preset from Lara to Aura (modern/minimal)
- Update color palette to REV FCU brand: primary red #cb3300, teal accent #1cd6c3
- Modernize border radius (4px -> 8px base, 6px -> 12px large)
- Update Bootstrap/Runstrap variables with REV FCU brand colors and Inter font
- Add REV FCU branded logos (light/dark variants) to sidebar
- Refine light mode: cleaner white backgrounds, softer shadows and borders
- Refine dark mode: Tailwind gray-900 palette, #2f343f subtle borders
- Update tokens-rundeck.css primary colors

Virtual Threads (Java 25):
- Enable spring.threads.virtual.enabled for Jetty virtual thread request handling
- AuthorizationService: newFixedThreadPool(2) -> newVirtualThreadPerTaskExecutor()
- ProjectManagerService: newFixedThreadPool(2) -> newVirtualThreadPerTaskExecutor()
- EngineWorkflowExecutor: newCachedThreadPool() -> newVirtualThreadPerTaskExecutor()
  for parallel workflow steps (eliminates unbounded platform thread risk)
- LogFileStorageTask + NodeService executors: enable virtualThreads=true,
  bump concurrency limits (10->30 storage, 25->50 node loading)
- ScmLoaderService scheduled pool: 2 -> 4 threads
- TaskService scheduled pool: 5 -> 10 threads

Connection Pool:
- Bump maxActive 50 -> 100, minIdle 5 -> 10, maxIdle 25 -> 50
  to support higher concurrency from virtual threads

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>